--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tsc-watch": "^4.4.0"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "ps-tree": "^1.2.0",
     "tsc": "^2.0.3"
   }
